# sageVDB

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  DEPLOYMENT.md  MANIFEST.in  README.md  RELEASE.md  __init__.py  build.sh  build_manylinux.sh  pyproject.toml  pytest.ini  quickstart.sh  sagevdb.code-workspace
.github/: copilot-instructions.md
.github/agents/: sageDB-agent.agent.md  sageVDB-agent.agent.md
.github/workflows/: ci-tests.yml  quick-test.yml
cmake/: gperftools.cmake  pybind11_dependency.cmake
docs/: ISSUES_RESOLUTION_REPORT.md  ISSUE_17_STATUS.md  USAGE_MODES.md  sage-anns-integration-prompts.md  sage_anns_integration.md
docs/adr/: 0001-fail-fast-for-unsupported-algorithm-capabilities.md  0001-persistence-and-multimodal-contract-tests.md  0001-vectorstore-annsregistry-boundary-convergence.md
docs/guides/: README_Multimodal.md
docs/ops/: CI_TEST.md  DEPLOYMENT.md  HOOK_UPDATE.md  RELEASE.md  SUBMODULE.md  TEST_HOOK.md
examples/: python_persistence_example.py  sage_anns_integration_example.py
hooks/: pre-push
include/sage_vdb/: common.h  fusion_strategies.h  metadata_store.h  modality_processors.h  multimodal_fusion.h  multimodal_sage_vdb.h  query_engine.h  sage_vdb.h  vector_store.h
include/sage_vdb/anns/: anns_interface.h  brute_force_plugin.h  faiss_plugin.h  flat_gpu_plugin.h  song_plugin.h  vamana_plugin.h
include/sage_vdb/anns/flat_gpu/: cuda_helpers.h
include/sage_vdb/anns/song/: blocked_bloomfilter.hpp  bloomfilter.hpp  config.hpp  cuckoofilter.hpp  data.hpp  fixhash.hpp  kernelgraph.cuh  warp_astar_accelerator.cuh
include/sage_vdb/anns/vamana/: distance.h  vertex.h
python/: CMakeLists.txt  bindings.cpp
sagevdb/: __init__.py  _vdb_backend.py  sage_anns.py
src/: fusion_strategies.cpp  metadata_store.cpp  modality_manager.cpp  modality_processors.cpp  multimodal_sage_vdb.cpp  query_engine.cpp  sage_vdb.cpp  vector_store.cpp
src/anns/: anns_interface.cpp  brute_force_plugin.cpp  brute_force_plugin.h  faiss_plugin.cpp  faiss_plugin.h  flat_gpu_plugin.cpp  register_builtin_algorithms.cpp  song_plugin.cpp  vamana_plugin.cpp
src/anns/flat_gpu/: cuda_helpers.cu  cuda_helpers_stub.cpp
tests/: test_anns_registry.cpp  test_issue27_registry_boundary_cleanup.py  test_issue28_capability_failfast.py  test_issue29_persistence_contract.py  test_libamm_integration.cpp  test_multimodal.cpp  test_persistence.py  test_sage_anns_backend.py  test_sage_anns_perf.py  test_sage_vdb.cpp
